android/app/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_sleeper_armeabi-v7a.stdout.txt
[1/2] Building C object CMakeFiles/sleeper.dir/sleeper.c.o
/home/hashik/StudioProjects/flutter_apps/sleeping_assignment/sleeper/sleeper.c:45:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
/home/hashik/StudioProjects/flutter_apps/sleeping_assignment/sleeper/sleeper.c:59:5: warning: implicit declaration of function 'pthread_create' is invalid in C99 [-Wimplicit-function-declaration]
    pthread_create(&threads[id], NULL, &thread_sleep, (void *) info);
    ^
/home/hashik/StudioProjects/flutter_apps/sleeping_assignment/sleeper/sleeper.c:59:5: warning: declaration of built-in function 'pthread_create' requires inclusion of the header <pthread.h> [-Wbuiltin-requires-header]
3 warnings generated.
[2/2] Linking C shared library /home/hashik/StudioProjects/flutter_apps/sleeping_assignment/build/app/intermediates/cmake/debug/obj/armeabi-v7a/libsleeper.so
FAILED: : && /home/hashik/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/linux-x86_64/bin/clang  --target=armv7-none-linux-androideabi16 --gcc-toolchain=/home/hashik/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/linux-x86_64 --sysroot=/home/hashik/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/linux-x86_64/sysroot -fPIC -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security  -O0 -fno-limit-debug-info  -Wl,--exclude-libs,libgcc_real.a -Wl,--exclude-libs,libatomic.a -static-libstdc++ -Wl,--build-id -Wl,--fatal-warnings -Wl,--exclude-libs,libunwind.a -Wl,--no-undefined -Qunused-arguments -shared -Wl,-soname,libsleeper.so -o /home/hashik/StudioProjects/flutter_apps/sleeping_assignment/build/app/intermediates/cmake/debug/obj/armeabi-v7a/libsleeper.so CMakeFiles/sleeper.dir/sleeper.c.o  -latomic -lm && :
/home/hashik/StudioProjects/flutter_apps/sleeping_assignment/sleeper/sleeper.c:44: error: undefined reference to 'Dart_PostCObject'
clang: error: linker command failed with exit code 1 (use -v to see invocation)
ninja: build stopped: subcommand failed.
